# freight-full

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.worker  PRD.md  README.md  Railway_Deployment_Guide.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tdd_commands.md  tdd_setup.md  todo.md
.claude/commands/: api-integration-test.md  coverage-analysis.md  green.md  mock-api.md  red.md  refactor.md  tdd-cycle.md  test-component.md
.github/workflows/: test.yml
alembic/: env.py
freight/: __init__.py
freight/api/: main.py
freight/api/routers/: health.py
freight/core/: config.py
freight/worker/: main.py  tasks.py
mcp-servers/: README.md  claude-desktop-config.json  test-mcp-setup.sh
mcp-servers/docker/: README.md  config.example.json
mcp-servers/fastapi-integration/: README.md  freight_mcp_server.py  requirements.txt
mcp-servers/github/: README.md  config.example.json
mcp-servers/postgresql/: README.md  config.example.json
mcp-servers/redis/: README.md  config.example.json
scratchpad/milestone-1/: foundation-infrastructure-thoughts.md
scratchpad/milestone-2/: core-processing-engine-thoughts.md
scratchpad/milestone-3/: api-layer-thoughts.md
scratchpad/milestone-4/: mvp-completion-thoughts.md
scratchpad/setup/: initial-setup-thoughts.md
scripts/: init-db.sql
src/: polyfills.js  setupTests.js
src/__mocks__/: server.js
src/__mocks__/handlers/: index.js
src/components/Button/: Button.jsx  Button.test.jsx
tests/: __init__.py  conftest.py
tests/unit/: test_health.py  test_worker.py
